# codex-worker-dispatcher

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: public-sharing.md  public-sharing.zh-CN.md
docs/superpowers/plans/: 2026-07-17-cross-platform-codex-worker-dispatcher.md  2026-07-18-codex-skill-first-distribution.md
docs/superpowers/specs/: 2026-07-17-cross-platform-codex-worker-dispatcher-design.md  2026-07-18-codex-skill-first-distribution-design.md
skill/dispatching-codex-workers/: SKILL.md
skill/dispatching-codex-workers/agents/: openai.yaml
skill/dispatching-codex-workers/references/: design.md
src/codex_worker_dispatcher/: __init__.py  __main__.py  cli.py  errors.py  installer.py  lifecycle.py  process.py  routing.py  runner.py  state.py  supervisor.py
tests/: test_ci.py  test_cli.py  test_installer.py  test_lifecycle.py  test_package.py  test_process.py  test_public_release.py  test_routing.py  test_skill.py  test_state.py  test_supervisor.py
tests/skill-evals/: scenarios.md
tests/skill-evals/baseline/: 01-close-loop-initial.md  01-close-loop-strengthened-pass.md  01-close-loop.md  02-write-scope-initial.md  02-write-scope-strengthened-pass.md  02-write-scope.md  03-verified-reap-initial.md  03-verified-reap-strengthened-pass.md  03-verified-reap.md
tests/skill-evals/with-skill/: 01-close-loop.md  02-write-scope.md  03-verified-reap.md
